--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,15 @@ spring.datasource.password=
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#SQL
+spring.sql.init.mode=never
 
 
 
